# cpp_fractions

./: CMakeLists.txt  README.md  main  main.cpp  main_funcs.cpp
examples/: README.md  advanced_utils.cpp  basic_usage.cpp  math_operations.cpp
includes/: fractions.h
src/: arithmetic_operations.cpp  comparison.cpp  fractions.cpp  fractions.h  helpers.h  utils.cpp
tests/: README.md
